sss.html update
just a update to add some cool stuff too

--- a/sss.html
+++ b/sss.html
@@ -2,13 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Invite My Discord Bot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bot Links</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #2c2f33;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    h1 {
+      margin-bottom: 40px;
+    }
+    button {
+      background-color: #7289da;
+      border: none;
+      padding: 15px 30px;
+      margin: 10px;
+      color: white;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #5b6eae;
+    }
+    a {
+      text-decoration: none;
+      color: inherit;
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
-  <h1>Invite My Discord Bot</h1>
-  <p>Click the button below to invite the bot to your server:</p>
-  <a href="https://discord.com/oauth2/authorize?client_id=1376441065770323978&scope=bot%20applications.commands&permissions=0" target="_blank">
-    <button>Invite Bot</button>
+  <h1>My Discord Bot</h1>
+
+  <a href="https://discord.gg/YOUR_SERVER_INVITE" target="_blank" rel="noopener noreferrer">
+    <button>Join Bot Testing Server</button>
+  </a>
+
+  <a href="https://discord.com/oauth2/authorize?client_id=1376441065770323978&scope=bot%20applications.commands&permissions=274878225920" target="_blank" rel="noopener noreferrer">
+    <button>Add Bot to Your Server</button>
   </a>
 </body>
 </html>
