--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
   <h1>My Discord Bot</h1>
 
-  <a href="https://discord.gg/YOUR_SERVER_INVITE" target="_blank" rel="noopener noreferrer">
+  <a href="https://discord.gg/txEtqrPDkH" target="_blank" rel="noopener noreferrer">
     <button>Join Bot Testing Server</button>
   </a>
 
