--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <h1>Cynthia bot portal</h1>
     <button><a href="https://discord.gg/txEtqrPDkH" target="_blank" rel="noopener noreferrer">Join Testing And Development Server</a></button>
     <button><a href="https://discord.com/oauth2/authorize?client_id=1376441065770323978&scope=bot%20applications.commands&permissions=8" target="_blank" rel="noopener noreferrer">Add Bot to Server</a></button>
-    <button><a href="info/" >More Info</a></button>
-    <button><a href="help/">Self help page</a></button>
+    <button><a href="info.html" >More Info</a></button>
+    <button><a href="help.html">Self help page</a></button>
 
     <div class="volume-control">
       <label for="volumeSlider">🔊 Volume:</label>
