--- a/info.html
+++ b/info.html
@@ -41,7 +41,7 @@
     <iframe src="https://www.youtube.com/embed/Ac68OsTpyTM" allowfullscreen></iframe>
     
     <br>
-    <a href="main.html">⬅️ Back to Home</a>
+    <a href="index.html">⬅️ Back to Home</a>
   </div>
 </body>
 </html>
