--- a/info.html
+++ b/info.html
@@ -1,47 +1,24 @@
+<!-- info.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bot Help Video</title>
+  <meta charset="UTF-8">
+  <title>Bot Info</title>
   <style>
     body {
-      background-color: #0e0e0e;
-      color: white;
+      background: #111;
+      color: #fff;
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    .container {
       padding: 2em;
     }
-    iframe {
-      width: 90%;
-      max-width: 800px;
-      height: 450px;
-      border: none;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-    }
     a {
-      color: #7289da;
-      display: inline-block;
-      margin-top: 1em;
-      text-decoration: none;
+      color: rgb(255, 255, 255);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>📺 Bot Help Video</h1>
-    <p>Watch this video for help using the bot.</p>
-    
-    <!-- Embed YouTube or a local video -->
-    <iframe src="https://www.youtube.com/embed/Ac68OsTpyTM" allowfullscreen></iframe>
-    
-    <br>
-    <a href="index.html">⬅️ Back to Home</a>
-  </div>
+  <h1>Information page</h1>
+  <p>1234567890qwertyuiopasdfghjklzxcvbnm</p>
+  <p><a href="index.html">⬅️ Back to Home</a></p>
 </body>
 </html>
