--- a/help.html
+++ b/help.html
@@ -36,7 +36,7 @@
   <div class="container">
     <h1>📺 Bot Help Video</h1>
     <p>Watch this video for help using the bot.</p>
-    <iframe src="https://www.youtube.com/embed/Ac68OsTpyTM" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/1234" allowfullscreen></iframe>
     <br>
     <a href="index.html">⬅️ Back to Home</a>
   </div>
