--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <button><a href="https://discord.com/oauth2/authorize?client_id=1376441065770323978&scope=bot%20applications.commands&permissions=8" target="_blank" rel="noopener noreferrer">Add Bot to Server</a></button>
     <button><a href="info.html" >More Info</a></button>
     <button><a href="help.html">Self help page</a></button>
+<h1>TheDogIs a monkey</h1>
 
     <div class="volume-control">
       <label for="volumeSlider">🔊 Volume:</label>
