--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <h1>Information page</h1>
-  <p>1234567890qwertyuiopasdfghjklzxcvbnm</p>
+  <p>The Dog was here</p>
   <p><a href="index.html">⬅️ Back to Home</a></p>
 </body>
 </html>
